refactor(core): extract agent run write support