@@ -1,7 +1,5 @@
 package fun.fengwk.kkstudio.core.agent.run.service.impl;
 
-import static fun.fengwk.kkstudio.core.agent.support.AgentIdGenerator.nextRunId;
-
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -9,12 +7,10 @@ import fun.fengwk.kkstudio.core.agent.run.repo.AgentRunRepository;
 import fun.fengwk.kkstudio.core.agent.run.service.AgentRunService;
 import fun.fengwk.kkstudio.core.agent.run.service.converter.AgentRunConverter;
 import fun.fengwk.kkstudio.core.agent.run.service.model.AgentRun;
-import fun.fengwk.kkstudio.core.agent.session.repo.AgentSessionRepository;
 import fun.fengwk.kkstudio.share.model.AgentRunDTO;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * @author fengwk
@@ -28,24 +24,19 @@ public class AgentRunServiceImpl implements AgentRunService {
   private static final String STATUS_SUCCEEDED = "succeeded";
   private static final String STATUS_FAILED = "failed";
 
-  private final AgentSessionRepository agentSessionRepository;
   private final AgentRunRepository agentRunRepository;
   private final AgentRunConverter agentRunConverter;
+  private final AgentRunMutationFactory runMutationFactory;
+  private final AgentRunGuard runGuard;
 
   @Override
   public AgentRunDTO createQueuedRun(String runId, String sessionId, String triggerEventId) {
-    validateCreateQueuedRunArgs(runId, sessionId, triggerEventId);
-    requireSession(sessionId);
-
-    LocalDateTime now = LocalDateTime.now();
-    AgentRun run = new AgentRun();
-    run.setId(nextRunId());
-    run.setRunId(runId);
-    run.setSessionId(sessionId);
-    run.setTriggerEventId(triggerEventId);
-    run.setStatus(STATUS_QUEUED);
-    run.setCreateTime(now);
-    run.setUpdateTime(now);
+    AgentRun run =
+        runMutationFactory.newQueuedRun(
+            runGuard.requireRunId(runId),
+            runGuard.requireSessionId(sessionId),
+            runGuard.requireTriggerEventId(triggerEventId),
+            LocalDateTime.now());
     if (!agentRunRepository.add(run)) {
       throw new IllegalStateException("create queued run failed");
     }
@@ -55,10 +46,7 @@ public class AgentRunServiceImpl implements AgentRunService {
 
   @Override
   public AgentRunDTO getRun(String runId) {
-    if (runId == null || runId.isBlank()) {
-      throw new IllegalArgumentException("runId must not be blank");
-    }
-    return agentRunConverter.convert(agentRunRepository.getByRunId(runId));
+    return agentRunConverter.convert(agentRunRepository.getByRunId(runGuard.requireRunId(runId)));
   }
 
   @Override
@@ -78,45 +66,18 @@ public class AgentRunServiceImpl implements AgentRunService {
 
   @Override
   public List<AgentRunDTO> listRuns(String sessionId) {
-    requireSession(sessionId);
-    return agentRunRepository.listBySessionId(sessionId).stream()
+    return agentRunRepository.listBySessionId(runGuard.requireSessionId(sessionId)).stream()
         .map(agentRunConverter::convert)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
   public boolean hasActiveRun(String sessionId) {
-    if (sessionId == null || sessionId.isBlank()) {
-      throw new IllegalArgumentException("sessionId must not be blank");
-    }
-    return agentRunRepository.existsActiveBySessionId(sessionId);
-  }
-
-  private void validateCreateQueuedRunArgs(String runId, String sessionId, String triggerEventId) {
-    if (runId == null || runId.isBlank()) {
-      throw new IllegalArgumentException("runId must not be blank");
-    }
-    if (sessionId == null || sessionId.isBlank()) {
-      throw new IllegalArgumentException("sessionId must not be blank");
-    }
-    if (triggerEventId == null || triggerEventId.isBlank()) {
-      throw new IllegalArgumentException("triggerEventId must not be blank");
-    }
-  }
-
-  private void requireSession(String sessionId) {
-    if (sessionId == null || sessionId.isBlank()) {
-      throw new IllegalArgumentException("sessionId must not be blank");
-    }
-    if (agentSessionRepository.getBySessionId(sessionId) == null) {
-      throw new IllegalArgumentException("session not found: " + sessionId);
-    }
+    return agentRunRepository.existsActiveBySessionId(runGuard.requireSessionId(sessionId));
   }
 
   private boolean updateStatus(String runId, String expectedStatus, String status) {
-    if (runId == null || runId.isBlank()) {
-      throw new IllegalArgumentException("runId must not be blank");
-    }
-    return agentRunRepository.updateStatus(runId, expectedStatus, status, LocalDateTime.now());
+    return agentRunRepository.updateStatus(
+        runGuard.requireRunId(runId), expectedStatus, status, LocalDateTime.now());
   }
 }
